# ConnectFour

./: CMakeLists.txt  README.md  main.cpp
engine/: game.cpp  game.h
engine/controller/: gameengine.cpp  gameengine.h  gamestate.h
object/: character.h  field.cpp  field.h  key.h  player.h  token.h
view/: view.h  viewmanager.cpp  viewmanager.h
